# pythonProjectSkeleton

./: .gitignore  install.sh  pyproject.toml  run.sh
src/hello_world/: __init__.py  __main__.py
